# cafleet

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  compose.yaml  mise.toml  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/rules/: a2a-reference.md  bash-tool.md  code-quality.md  commands.md  design-doc-numbering.md  git-workflow.md  skill-discovery.md
.github/workflows/: ci.yml  publish.yml
admin/: index.html  mise.toml  vite.config.ts
admin/src/: App.tsx  api.ts  types.ts
cafleet/: mise.toml  pyproject.toml
cafleet/src/cafleet/: agent_card.py  bash_routing.py  broker.py  cli.py  coding_agent.py  config.py  executor.py  models.py  output.py  permissions.py  registry_store.py  server.py  task_store.py  tmux.py  webui_api.py
cafleet/src/cafleet/alembic/: env.py
cafleet/src/cafleet/alembic/versions/: 0001_initial_schema.py  0002_local_simplification.py  0003_add_origin_task_id.py  0004_add_agent_placements.py  0005_add_coding_agent.py  0006_seed_administrator_agent.py  0007_session_bootstrap_director.py  0008_capitalize_root_director_name.py
cafleet/src/cafleet/api/: registry.py
cafleet/src/cafleet/db/: engine.py  models.py
cafleet/src/cafleet/webui/: index.html
cafleet/src/cafleet/webui/assets/: index-B5OdxVhF.js  index-By1gD7AU.css
cafleet/tests/: conftest.py  test_a2a.py  test_alembic_0002_upgrade.py  test_alembic_0006_upgrade.py  test_alembic_0008_upgrade.py  test_alembic_smoke.py  test_auth.py  test_bash_routing_matcher.py  test_bash_routing_payload.py  test_broker_administrator.py  test_broker_messaging.py  test_broker_registry.py  test_broker_webui.py  test_cli.py  test_cli_agent.py  test_cli_bash_exec.py  test_cli_claude_helpers.py  test_cli_client_command.py  test_cli_doctor.py  test_cli_member.py  test_cli_member_delete.py  test_cli_member_exec.py  test_cli_member_ping.py  test_cli_member_safe_exec.py  test_cli_member_send_input.py  test_cli_message.py  test_cli_message_truncation.py  test_cli_register.py  test_cli_restructure.py  test_cli_session_bootstrap.py  test_cli_session_flag.py  test_cli_version.py  test_coding_agent.py  test_db_engine.py  test_db_init.py  test_db_models.py  test_db_pragmas.py  test_design_doc_interview_skill.py  test_executor.py  test_models.py  (+15 more)
client/: mise.toml  pyproject.toml
client/tests/: test_cli.py  test_cli_member.py  test_cli_register.py  test_tmux.py
design-docs/0000003-github-actions-ci/: design-doc.md
design-docs/0000004-webui-message-viewer/: design-doc.md
design-docs/0000005-streaming-subscribe/: design-doc.md
design-docs/0000006-ty-type-checking/: design-doc.md
design-docs/0000007-api-key-specification/: design-doc.md
design-docs/0000008-cli-option-specification/: design-doc.md
design-docs/0000009-mise-task-fullpath/: design-doc.md
design-docs/0000010-sqlite-store-migration/: design-doc.md
design-docs/0000011-remove-mcp-server/: design-doc.md
design-docs/0000012-registry-bundled-webui/: design-doc.md
design-docs/0000013-admin-discord-style-timeline/: design-doc.md
design-docs/0000014-hikyaku-member-lifecycle/: design-doc.md
design-docs/0000015-remove-auth0-local-session-model/: design-doc.md
design-docs/0000016-hikyaku-monitoring-skill/: design-doc.md
design-docs/0000017-client-registry-integration/: design-doc.md
design-docs/0000018-multi-runner-support/: design-doc.md
design-docs/0000019-project-rename-cafleet/: design-doc.md
design-docs/0000020-tmux-push-notification/: design-doc.md
design-docs/0000021-direct-sqlite-cli/: design-doc.md
design-docs/0000022-cafleet-design-doc-skills/: design-doc.md
design-docs/0000023-session-id-cli-flag-docs/: design-doc.md
design-docs/0000024-cafleet-server-cli/: design-doc.md
design-docs/0000024-cleanup-and-refactor/: design-doc.md
design-docs/0000025-admin-send-improvements/: design-doc.md
design-docs/0000026-claude-member-pane-naming/: design-doc.md
design-docs/0000026-session-bootstrap-director/: design-doc.md
design-docs/0000027-member-send-input/: design-doc.md
design-docs/0000029-claude-member-pane-naming/: design-doc.md
design-docs/0000030-cafleet-execute-pr-review-loop/: design-doc.md
design-docs/0000031-cli-version-flag/: design-doc.md
design-docs/0000032-robust-member-teardown/: design-doc.md
design-docs/0000033-askuserquestion-send-input-options/: design-doc.md
design-docs/0000034-member-bash-via-director/: design-doc.md
design-docs/0000035-member-bash-whitelist/: design-doc.md
design-docs/0000035-repository-cleanup/: design-doc.md
design-docs/0000036-cafleet-skill-improvements/: design-doc.md
design-docs/0000037-permission-aware-shell-dispatch/: design-doc.md
docs/: codex-members.md
hikyaku/: mise.toml
mcp-server/: pyproject.toml
mcp-server/src/hikyaku_mcp/: config.py  registry.py  server.py  sse_client.py
mcp-server/tests/: test_registry.py  test_server.py
registry/: mise.toml  pyproject.toml
registry/src/hikyaku_registry/: alembic.ini  auth.py  cleanup.py  cli.py  config.py  executor.py  main.py  models.py  pubsub.py  redis_client.py  registry_store.py  task_store.py  webui_api.py
registry/src/hikyaku_registry/alembic/: env.py
registry/src/hikyaku_registry/alembic/versions/: 0001_initial_schema.py  0002_add_origin_task_id.py  0002_local_simplification.py  0003_add_agent_placements.py  0003_add_origin_task_id.py  0004_add_agent_placements.py
registry/src/hikyaku_registry/api/: registry.py  subscribe.py
registry/src/hikyaku_registry/db/: engine.py  models.py
registry/tests/: conftest.py  test_a2a.py  test_agent_auth_changes.py  test_alembic_0002_upgrade.py  test_alembic_smoke.py  test_api_keys.py  test_auth.py  test_auth0.py  test_cleanup.py  test_db_engine.py  test_db_init.py  test_db_models.py  test_e2e_subscribe.py  test_executor.py  test_key_endpoints.py  test_pubsub.py  test_registry_api.py  test_registry_store.py  test_registry_store_sql.py  test_session_cli.py  test_subscribe.py  test_task_store.py  test_webui_api.py  test_webui_auth_migration.py  test_webui_mount.py
(+100 files in other folders)
