[project]
name = "hikyaku"
version = "0.1.0"
description = "A2A-native message broker and agent registry for coding agents"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["registry", "client", "mcp-server"]

[tool.uv.sources]
hikyaku-registry = { workspace = true }
hikyaku-client = { workspace = true }
hikyaku-mcp = { workspace = true }

[dependency-groups]
dev = [
    "hikyaku-registry",
    "hikyaku-client",
    "hikyaku-mcp",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.11.0",
    "ty>=0.0.26",
]

[tool.ty]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["registry/src", "client/src"]

[tool.ty.analysis]
# Suppress errors for third-party libraries without type stubs.
# Add more patterns as needed when new dependencies are introduced.
allowed-unresolved-imports = [
    "a2a.*",
    "pydantic_settings.*",
    "sse_starlette.*",
    "starlette.*",
    "fastapi.*",
    "uvicorn",
    "click.*",
    "httpx.*",
    "httpx_sse.*",
]

[tool.ruff]
exclude = ["vendor/"]
