[project]
name = "cafleet"
version = "0.1.0"
description = "A2A-native message broker and agent registry for coding agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "alembic",
    "click",
    "pydantic",
    "pydantic-settings",
]

[project.scripts]
cafleet = "cafleet.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cafleet"]
include = [
  "src/cafleet/alembic.ini",
  "src/cafleet/alembic/**/*",
  "src/cafleet/webui/**/*",
]

[tool.pytest.ini_options]
