[project]
name = "cafleet"
version = "0.1.0"
description = "A2A-inspired message broker and agent registry for coding agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "alembic",
    "click",
    "pydantic",
    "pydantic-settings",
]

[project.scripts]
cafleet = "cafleet.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cafleet"]
include = [
  "src/cafleet/alembic.ini",
  "src/cafleet/alembic/**/*",
  "src/cafleet/webui/**/*",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.11.0",
    "ty>=0.0.26",
]

[tool.pytest.ini_options]

[tool.ty]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["src"]

[tool.ty.analysis]
# Suppress errors for third-party libraries without type stubs.
# Add more patterns as needed when new dependencies are introduced.
allowed-unresolved-imports = [
    "pydantic_settings.*",
    "starlette.*",
    "fastapi.*",
    "uvicorn",
    "click.*",
]

[tool.ruff.lint]
extend-select = ["I", "UP", "SIM", "B", "PERF", "RET", "N", "C4", "ERA", "PT", "PIE", "PTH", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["cafleet"]
