[project]
name = "hikyaku-mcp"
version = "0.1.0"
description = "MCP server for Hikyaku A2A message broker"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "mcp>=1.0",
]

[project.scripts]
hikyaku-mcp = "hikyaku_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hikyaku_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
