[project]
name = "hikyaku-registry"
version = "0.1.0"
description = "A2A-native message broker and agent registry server"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "a2a-sdk",
    "sqlalchemy>=2.0",
    "alembic",
    "aiosqlite",
    "click",
    "pydantic",
    "pydantic-settings",
]

[project.scripts]
hikyaku-registry = "hikyaku_registry.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hikyaku_registry"]
include = [
  "src/hikyaku_registry/alembic.ini",
  "src/hikyaku_registry/alembic/**/*",
  "src/hikyaku_registry/webui/**/*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
